gccida/g0/tree_int_cst_lt
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3890:19: error: expected expression
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3890:11: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3890:49: error: expected expression
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3890:41: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3901:19: error: expected expression
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3901:11: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3901:49: error: expected expression
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/tree.c:3901:41: error: use of undeclared identifier '_OWORD'
return *( _OWORD *)&t1->block.vars < *( _OWORD *)&t2->block.vars; 
                                        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/tree_int_cst_lt/src/obj/tree.o] Error 1
